Update đối tượng Ball, phương thức nhân bóng và kiểm tra ăn TripleBallPowerUp.